@@ -1,5 +1,6 @@
 use lib '.';
 use t::Helper;
+use Mojo::File qw(tempdir);
 use Convos::Plugin::Bot::Action::Karma;
 
 plan skip_all => 'TEST_BOT=1' unless $ENV{TEST_BOT} or $ENV{TEST_ALL};
@@ -8,7 +9,7 @@ $ENV{CONVOS_BOT_ALLOW_STANDALONE} = 1;
 $ENV{CONVOS_BOT_EMAIL} ||= 'bot@convos.chat';
 
 my $t     = t::Helper->t;
-my $karma = Convos::Plugin::Bot::Action::Karma->new;
+my $karma = Convos::Plugin::Bot::Action::Karma->new(home => tempdir);
 
 $karma->register($t->app->bot, {});
 
